--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,21 +34,25 @@ requirements:
     - r-base
     - r-rcpp
     - r-rdpack
-    - r-treetools >=1.1.0
+    - r-treetools >1.3.1
     - r-ape >=5.0
     - r-colorspace
     - r-memoise
     - r-phangorn >=2.2.1
+    - r-shiny
+    - r-shinyjs
   run:
     - r-base
     - {{ native }}gcc-libs         # [win]
     - r-rcpp
     - r-rdpack
-    - r-treetools >=1.1.0
+    - r-treetools >1.3.1
     - r-ape >=5.0
     - r-colorspace
     - r-memoise
     - r-phangorn >=2.2.1
+    - r-shiny
+    - r-shinyjs
 
 test:
   commands:
