--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,8 @@ source:
 build:
   merge_build_host: true  # [win]
   number: 0
+  # given by r-treetools availability
+  skip: true  # [r_base == "3.6" and win]
   rpaths:
     - lib/R/lib/
     - lib/
