--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,8 +15,6 @@ source:
 build:
   merge_build_host: true  # [win]
   number: 0
-  # given by r-treetools availability
-  skip: true  # [r_base == "3.6" and win]
   rpaths:
     - lib/R/lib/
     - lib/
@@ -32,12 +30,14 @@ requirements:
     - {{ posix }}sed               # [win]
     - {{ posix }}coreutils         # [win]
     - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
     - r-rcpp
-    - r-rdpack
-    - r-treetools >1.3.1
+    - r-rdpack >=0.7
+    - r-treetools >=1.5.0
     - r-ape >=5.0
+    - r-cli >=3.0
     - r-colorspace
     - r-memoise
     - r-phangorn >=2.2.1
@@ -47,9 +47,10 @@ requirements:
     - r-base
     - {{ native }}gcc-libs         # [win]
     - r-rcpp
-    - r-rdpack
-    - r-treetools >1.3.1
+    - r-rdpack >=0.7
+    - r-treetools >=1.5.0
     - r-ape >=5.0
+    - r-cli >=3.0
     - r-colorspace
     - r-memoise
     - r-phangorn >=2.2.1
